--- a/ms-anti-fraud/package.json
+++ b/ms-anti-fraud/package.json
@@ -34,7 +34,7 @@
     "graphql": "^16.8.1",
     "http-status-codes": "2.2.0",
     "kafkajs": "^2.2.4",
-    "mongodb": "4.7.0",
+    "mongodb": "^4.17.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.1"
