--- a/ms-transaction/package.json
+++ b/ms-transaction/package.json
@@ -30,11 +30,11 @@
     "@nestjs/platform-express": "^10.0.0",
     "dotenv": "10.0.0",
     "graphql": "^16.8.1",
+    "http-status-codes": "2.2.0",
     "kafkajs": "^2.2.4",
-    "mongodb": "4.7.0",
+    "mongodb": "^4.17.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "http-status-codes": "2.2.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
